--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@ html,body,#root {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: white;
+  background-color: #181126;
+
 }
 
 code {
