--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@ button:hover {
     font-size: 18px;
 }
 
-.navigation-container button:nth-child(2) {
+.button-singup {
     border: 3px dashed #ce0005;
 }
 
@@ -46,9 +46,6 @@ ul li {
     float: left;
     margin: 0 5px;
     padding: 5px;
-}
-ul li:hover {
-    border-bottom: 1px solid #ccc;
 }
 
 .home-container {
